--- a/page.html
+++ b/page.html
@@ -2,6 +2,7 @@
 <!-- https://github.com/tonio-m -->
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>New Tab</title>
     <link rel="stylesheet" href="style.css">
   </head>
